--- a/Backend.html
+++ b/Backend.html
@@ -1,8 +1,8 @@
-<b>El backend</b> es la parte del desarrollo web que se encarga de que toda la l贸gica de 
-una p谩gina web  funcione. Se trata del conjunto de acciones que pasan en una web 
-pero que no vemos como, por ejemplo, la comunicaci贸n con el servidor.
-El encargado de desarrollar <b>el back-end se pasa el d铆a entero Maldiciendo</b> en diferentes y
-variados c贸digos de programaci贸n en lenguajes
-
-
-
+El backend es la parte del desarrollo web que se
+encarga de que toda la l骻ica de una p醙ina web
+funcione. Se trata del conjunto de acciones que
+pasan en una web pero que no vemos como, por
+ejemplo, la comunicaci髇 con el servidor.
+El encargado de desarrollar el back-end se pasa
+el d韆 entero Maldiciendo en diferentes y
+variados c骴igos de programaci髇 en lenguajes
